FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
(Integer[]) new Object[]{1, 2} DOESN'T WORK!!!!! ffffffffffffffffffffffffffffffffffffffffffff